md_scheduler/scheduler/static/css/scheduler.css
/* Desktop defaults */
body {
  padding-top: 60px;
}

.content-mobile {
    display: none !important;
}

/* Spacers */
.spacer20 { 
    margin: 0; 
    padding: 0; 
    height: 1.2em; 
}

.spacer50 { 
    margin: 0; 
    padding: 0; 
    height: 2.5em; 
}

/* Utilities */
.center {
    text-align: center;
}

.right {
    text-align: right !important;
}

.float-r {
    float: right;
}

.float-l {
    float: left;
}

.flex-center {
    display: flex;
    justify-content: center;
}

.flex-link {
    display: flex !important;
    align-items: center;
}

.w-100-pc {
    width: 100%;
}

.w-70-pc {
    width: 70%;
}

.w-3_7-em {
    width: 3.7em;
}

.hidden {
    display: none;
}

.bg-teal {
    background-color: #138496;
}

.bg-light-gray {
    background-color: #eceff1;
}

.txt-w {
    color: white !important;
}

.txt-gold {
    color: #BF9B19
}

.in-blk {
    display: inline-block;
}

/* HTML elements */
hr {
    color: #138496;
    border-color: #138496;
    background-color: #138496;
}

textarea.form-control {
    resize: none !important;
    padding: 0.35em !important;
    padding-left: 0.25em !important;
    padding-right: 0.15em !important;
    padding-bottom: 0.35em !important;
}

select.form-control {
    padding: 0.15em !important;
}

input.form-control {
    padding-top: 0.35em !important;
    padding-left: 0.25em !important;
    padding-right: 0.25em !important;
    padding-bottom: 0.35em !important;
}

/* Specific elements */
.alert-custom {
    position: fixed !important;
    top: 3.5em;
    left: 0;
    width: 100%;
    z-index: 999;
}

#schedule {
    margin-top: 1em;
    margin-bottom: 1em;
}

.month {
    border: 1px solid white;
    background-color: lightblue;
    border-radius: 0.4em;
}

.week_block {
    padding: 0px !important;
}

.week {
    border: 1px solid white;
    width: 25%;
    float: left;
    background-color: lightgoldenrodyellow;
    border-radius: 0.4em;
}

.activity_block {
    padding: 0px !important;
}

.activity_display {
    border: 1px solid white;
    width: 25%;
    float: left;
    overflow-wrap: break-word;
    background-color: #eceff1;
    border-radius: 0.4em;
    font-size: smaller;
}

.copy_program {
    display: inline;
    float: right;
}

.activity_header {
    padding-left: 1em;
    padding-right: 1em;
    color: #BF9B19;
}

.activity {
    padding-top: 1em;
    padding-left: 1em;
    padding-right: 1em;
    background-color: lightgoldenrodyellow;
    border-radius: 0.5em;
}

.add_link {
    padding-left: 1em;
    padding-top: 1em;
}

.act_slot_selector {
    height: 2.4em;
}

.selected_slots {
    height: 5em;
}

.act_length {
    width: 70% !important;
    float: left;
}

.f_slot_corral {
    background-color: lightblue;
    padding: 0.5em;
    border-radius: 0.3em;
}

.top_div {
    min-height: 5em;
    background-color: #eceff1;
    margin-bottom: 0.5em;
    border: 1px darkgray solid;
    padding: 0.2em;
    border-radius: 0.3em;
}

.tag {
    border: 1px darkgray solid;
    padding: 0.2em 0.5em 0.2em 0.5em;
    margin: 0.2em !important;
    background-color: lightgray;
    border-radius: 1.5em;
    display: inline-flex;
    align-items: center;
    font-size: 0.8em;
}

.remove_tag {
    float: none !important;
    padding-left: 0.2em;
}

/* Loading screen stuff */
.loading {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0,0,0,.5);
    z-index: 1040;
}

.loading-wheel {
    width: 20px;
    height: 20px;
    margin-top: -40px;
    margin-left: -40px;
    
    position: absolute;
    top: 50%;
    left: 50%;
    
    border-width: 30px;
    border-radius: 50%;
    -webkit-animation: spin 1s linear infinite;
}

.style-2 .loading-wheel {
    border-style: double;
    border-color: #ccc transparent;
}

@-webkit-keyframes spin {
    0% {
        -webkit-transform: rotate(0);
    }
    100% {
        -webkit-transform: rotate(-360deg);
    }
}

/* Overlay stuff */

/* The side navigation menu */
.side-nav {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    padding-top: 60px;
    transition: 0.5s; /* 0.5 s transition effect to slide */
}

/* Position and style the close button (top right corner) */
.side-nav #close_filter {
    position: absolute;
    font-weight: 700;
    line-height: 1;
    opacity: .5;
    top: 1.5em;
    right: 0.7em;
    z-index: 1500;
    font-size: 2.2em;
    color: #818181;
    text-decoration: none;
    padding: 0.3em;
}

#close_filter:hover {
    color: #f1f1f1;
}

/* Mobile overrides */
@media only screen and (max-width: 767.9px) {
    body {
        padding-top: 30px;
    }

    #schedule {
        margin-top: 0px;
    }

    .content-desktop {
        display: none !important;
    }

    .content-mobile {
        display: inline !important;
    }

    .import-export {
        text-align: center;
    }

    .side-nav {
        padding-top: 80px;
    }

    .f_slot_corral {
        margin-left: 2em;
        margin-right: 2em;
        margin-bottom: 1em;
    }

    .f_act_name {
        margin-left: 1em;
        margin-right: 1em;
    }

    .f_act_slot_selector {
        margin-left: 1em;
        margin-right: 1em;
    }
}

